--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -27,7 +27,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - run: npm install
-      - run: npm run build.
+      - run: npm run build
       - uses : chrislennon/action-aws-cli@v1.1
       - run : aws s3 sync dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env : 
