--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
-      - uses : unfor19/install-aws-cli-action@v1
-      - run : aws s3 sync dist s3://mfe-container-prod/container/latest
+      - uses : chrislennon/action-aws-cli@v1.1
+      - run : aws s3 sync dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/container/latest
         env : 
-          AWS_ACCESS_KEY_ID : AKIA3KAXCIFR6ER6DUTU
-          AWS_SECRET_ACCESS_KEY : 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
+          AWS_ACCESS_KEY_ID : ${{secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY : ${{secrets.AWS_SECRET_ACCESS_KEY}}
