--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: deploy-container
+name: deploy-marketing
 
 # Controls when the workflow will run
 on:
@@ -9,7 +9,7 @@ on:
     branches: 
       - master
     paths:
-      - 'container/**'
+      - 'marketing/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 defaults:
@@ -28,14 +28,12 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
-        env:
-          PRODUCTION_DOMAIN : ${{secrets.PRODUCTION_DOMAIN}}
       - uses : chrislennon/action-aws-cli@v1.1
-      - run : aws s3 sync dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/container/latest
+      - run : aws s3 sync dist s3://${{secrets.AWS_S3_BUCKET_NAME}}/marketing/latest
         env : 
           AWS_ACCESS_KEY_ID : ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY : ${{secrets.AWS_SECRET_ACCESS_KEY}}
-      - run : aws cloudfront create-invalidation --distribution-id ${{secrets.AWS_DISTRIBUTION_ID}} --paths "/container/latest/index.html"
+      - run : aws cloudfront create-invalidation --distribution-id ${{secrets.AWS_DISTRIBUTION_ID}} --paths "/marketing/latest/remoteEntry.js"
         env : 
           AWS_ACCESS_KEY_ID : ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY : ${{secrets.AWS_SECRET_ACCESS_KEY}}
