--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 defaults:
   run:
-    working-directory : container
+    working-directory : marketing
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
